LPA-1850 full bar without edit button styled, accordion macro fixed to display 'review LPA' bar on mobile.

--- a/service-front/assets/sass/patterns/_accordion.scss
+++ b/service-front/assets/sass/patterns/_accordion.scss
@@ -93,6 +93,11 @@
         margin-right: 92px;
         padding-right: 130px;
         border-right: 6px solid $white;
+        &--full {
+            margin-right: 0;
+            padding-right: 0;
+            border-right: none;
+        }
     }
 
     &.wide-label {
