--- a/service-front/public/assets/v2/css/application.css
+++ b/service-front/public/assets/v2/css/application.css
@@ -3625,6 +3625,10 @@ input[type=number] {
     margin-right: 92px;
     padding-right: 130px;
     border-right: 6px solid #fff; }
+    .accordion-summary .title-box--full {
+      margin-right: 0;
+      padding-right: 0;
+      border-right: none; }
   @media (min-width: 750px) {
     .accordion-summary.wide-label .title-box {
       padding-right: 215px; } }
